--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,46 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Page Title</title>
+        <title>SMTHV</title>
         <base href="/">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     </head>
 
     <body>
-        <h1>Lưu Trường Sinh Pro</h1>
+        <ul id="messages"></ul>
+        <form action="">
+            <input id="m" autocomplete="off" />
+            <button>Send</button>
+        </form>
+
+        <script src="{{ url_for('static', filename='socket.io.js') }}"></script>
+        <script src="{{ url_for('static', filename='jquery-3.4.1.min.js') }}"></script>
+
+        <script type="text/javascript" charset="utf-8">
+
+            $(function () {
+                var socket = io();
+                $('form').submit(function () {
+                    socket.emit('message', {
+                        data: $('#m').val(),
+                        id: socket.id
+                    });
+                    $('#m').val('');
+                    return false;
+                });
+
+                socket.on('message', function (msg) {
+                    console.log(msg)
+                    if (msg.from === "me") {
+                        $('#messages').append($('<li style="color:red" class="me">').text(msg.data));
+                    } else if (msg.from === "bot") {
+                        $('#messages').append($('<li style="color:blue" class="bot">').text(msg.data));
+                    }
+                    window.scrollTo(0, document.body.scrollHeight);
+                });
+            });
+
+        </script>
     </body>
 </html>
